--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "verify": "npm run test && npm run lint && npm run dependency-check && npm run build",
     "dependency-check": "dependency-check . --unused --no-dev && dependency-check . --missing --no-dev",
     "preversion": "npm run verify",
-    "prepublish": "typings install && rimraf dist && npm run build"
+    "prepare": "typings install",
+    "prepublishOnly": "rimraf dist && npm run build"
   },
   "repository": {
     "type": "git",
