Update to use @types/node
remove typings

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -22,7 +22,6 @@
   "compileOnSave": false,
   "include": [
     "src/**/*",
-    "custom-typings/*",
-    "typings/index.d.ts"
+    "custom-typings/*"
   ]
 }
