--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     ]
   },
   "dependencies": {
-    "astring": "^0.8.0",
+    "astring": "^0.9.1",
     "mkdirp": "^0.5.1",
     "rimraf": "^2.5.4",
     "typescript": "^2.2.0-dev.20161205",
@@ -46,13 +46,13 @@
   },
   "devDependencies": {
     "@types/mkdirp": "^0.3.29",
+    "@types/node": "^7.0.12",
     "@types/rimraf": "0.0.28",
     "@types/xtend": "^4.0.2",
     "ava": "^0.17.0",
     "dependency-check": "^2.6.0",
     "nyc": "^10.0.0",
     "tslint": "^5.0.0",
-    "tslint-config-unional": "^0.7.0",
-    "typings": "^2.0.0"
+    "tslint-config-unional": "^0.7.0"
   }
 }
