--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "reactor-webpack-ts-plugin",
   "version": "0.3.1",
   "description": "Creates a minimal build of the Ext JS framework for use in React apps.",
+  "files": [
+    "dist"
+  ],
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "scripts": {
