--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "astring": "^1.0.0",
     "mkdirp": "^0.5.1",
     "rimraf": "^2.5.4",
-    "typescript": "^2.2.0-dev.20161205",
+    "typescript": "^2.2.2",
     "xtend": "^4.0.1"
   },
   "devDependencies": {
