--- a/package.json
+++ b/package.json
@@ -42,11 +42,7 @@
   },
   "dependencies": {
     "@extjs/reactor-webpack-plugin": "^0.2.17",
-    "astring": "^1.0.0",
-    "mkdirp": "^0.5.1",
-    "rimraf": "^2.5.4",
-    "typescript": "^2.2.2",
-    "xtend": "^4.0.1"
+    "typescript": "^2.2.2"
   },
   "devDependencies": {
     "@types/mkdirp": "^0.3.29",
